@@ -2462,7 +2462,7 @@ pkl_ast_type_incr_step (pkl_ast ast, pkl_ast_node type)
 
 static void
 pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
-                          int *nframes, int *ndrops)
+                          int *nframes, int *ndrops, int *npopes)
 {
   /* STMT can be a statement or a declaration.  */
 
@@ -2472,6 +2472,7 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
       PKL_AST_RETURN_STMT_FUNCTION (stmt) = function; /* Note no ASTREF.  */
       PKL_AST_RETURN_STMT_NFRAMES (stmt) = *nframes;
       PKL_AST_RETURN_STMT_NDROPS (stmt) = *ndrops;
+      PKL_AST_RETURN_STMT_NPOPES (stmt) = *npopes;
       break;
     case PKL_AST_COMP_STMT:
       {
@@ -2480,7 +2481,7 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
         *nframes += 1;
         for (t = PKL_AST_COMP_STMT_STMTS (stmt); t;
              t = PKL_AST_CHAIN (t))
-          pkl_ast_finish_returns_1 (function, t, nframes, ndrops);
+          pkl_ast_finish_returns_1 (function, t, nframes, ndrops, npopes);
 
         /* Pop the frame of the compound itself.  */
         *nframes -= 1;
@@ -2489,11 +2490,11 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
     case PKL_AST_IF_STMT:
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_IF_STMT_THEN_STMT (stmt),
-                                nframes, ndrops);
+                                nframes, ndrops, npopes);
       if (PKL_AST_IF_STMT_ELSE_STMT (stmt))
         pkl_ast_finish_returns_1 (function,
                                   PKL_AST_IF_STMT_ELSE_STMT (stmt),
-                                  nframes, ndrops);
+                                  nframes, ndrops, npopes);
       break;
     case PKL_AST_LOOP_STMT:
       {
@@ -2501,23 +2502,27 @@ pkl_ast_finish_returns_1 (pkl_ast_node function, pkl_ast_node stmt,
           *ndrops += 3;
         pkl_ast_finish_returns_1 (function,
                                   PKL_AST_LOOP_STMT_BODY (stmt),
-                                  nframes, ndrops);
+                                  nframes, ndrops, npopes);
         if (PKL_AST_LOOP_STMT_ITERATOR (stmt))
           *ndrops -= 3;
         break;
       }
     case PKL_AST_TRY_CATCH_STMT:
+      *npopes += 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_CATCH_STMT_CODE (stmt),
-                                nframes, ndrops);
+                                nframes, ndrops, npopes);
+      *npopes -= 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_CATCH_STMT_HANDLER (stmt),
-                                nframes, ndrops);
+                                nframes, ndrops, npopes);
       break;
     case PKL_AST_TRY_UNTIL_STMT:
+      *npopes += 1;
       pkl_ast_finish_returns_1 (function,
                                 PKL_AST_TRY_UNTIL_STMT_CODE (stmt),
-                                nframes, ndrops);
+                                nframes, ndrops, npopes);
+      *npopes -= 1;
       break;
     case PKL_AST_DECL:
     case PKL_AST_EXP_STMT:
@@ -2539,8 +2544,9 @@ pkl_ast_finish_returns (pkl_ast_node function)
 {
   int nframes = 0;
   int ndrops = 0;
+  int npopes = 0;
   pkl_ast_finish_returns_1 (function, PKL_AST_FUNC_BODY (function),
-                            &nframes, &ndrops);
+                            &nframes, &ndrops, &npopes);
 }
 
 int
