@@ -1593,12 +1593,16 @@ pkl_ast_node pkl_ast_make_loop_stmt_iterator (pkl_ast ast,
    NDROPS is the number of stack elements to drop before returning
    from the function.
 
+   NPOPES is the number of exception stack elements to drop before
+   returning from the function.
+
    FUNCTION is the PKL_AST_FUNCTION containing this return
    statement. */
 
 #define PKL_AST_RETURN_STMT_EXP(AST) ((AST)->return_stmt.exp)
 #define PKL_AST_RETURN_STMT_NFRAMES(AST) ((AST)->return_stmt.nframes)
 #define PKL_AST_RETURN_STMT_NDROPS(AST) ((AST)->return_stmt.ndrops)
+#define PKL_AST_RETURN_STMT_NPOPES(AST) ((AST)->return_stmt.npopes)
 #define PKL_AST_RETURN_STMT_FUNCTION(AST) ((AST)->return_stmt.function)
 
 struct pkl_ast_return_stmt
@@ -1609,6 +1613,7 @@ struct pkl_ast_return_stmt
   union pkl_ast_node *function;
   int nframes;
   int ndrops;
+  int npopes;
 };
 
 pkl_ast_node pkl_ast_make_return_stmt (pkl_ast ast, pkl_ast_node exp);
